--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -1,35 +1,20 @@
 ==English==
-{{wikipedia}}
-===Etymology===
-[[onomatopoeic|Onomatopoeic]].
 
 ===Pronunciation===
 * {{IPA|/kwæk/}}
 * {{audio|en-us-quack.ogg|Audio (US)}}
 * {{rhymes|æk}}
 
-===Noun===
+===Etymology 1===
+[[onomatopoeic|Onomatopoeic]].
+
+====Noun====
 {{en-noun}}
 
 # The sound made by a [[duck]].
 #: ''Did you hear that duck make a '''quack'''?''
-# A fraudulent [[healer]] or incompetent [[doctor]] of [[medicine]], an [[impostor]] who claims to have qualifications to practice [[medicine]].
-#: ''That doctor is nothing but a lousy '''quack'''!''
-# A [[charlatan]]. <!-- #:''What a '''quack''' he is, saying that's an organic [[Viagra]]™ !'' -->
-# {{slang}} A [[doctor]].
 
-====Quotations====
-* '''1662''': ''Rump: or an Exact Collection of the Choycest Poems and Songs Relating to Late Times, Vol. II'', by ‘the most Eminent Wits’
-*: Tis hard to say, how much these Arse-wormes do urge us, We now need no '''Quack''' but these Jacks for to purge us, [...]
-* '''1720''': William Derham, ''Physico-theology''
-*: After ſome Months, the '''Quack''' gets privately to Town, [...]
-* '''1843''', [[:w:Thomas Carlyle|Thomas Carlyle]], ''[[:w:Past and Present (book)|Past and Present]]'', book 2, ch. 8, ''The Electon''
-*: ‘if we are ourselves valets, there shall ‘exist no hero for us; we shall not know the hero when we see him;’ - we shall take the '''quack''' for a hero; and cry, audibly through all ballot-boxes and machinery whatsoever, Thou art he; be thou King over us!
-
-====Synonyms====
-* See also [[Wikisaurus:deceiver]]
-
-====Translations====
+=====Translations=====
 {{trans-top|sound made by a duck}}
 * Dutch: {{t+|nl|kwak}}
 * Estonian: {{t+|et|prääks}}
@@ -44,6 +29,55 @@
 * Swedish: [[kvack]] {{n}}
 {{trans-bottom}}
 
+====Verb====
+{{en-verb}}
+
+# To make a [[noise]] like a [[duck]].
+#: ''The more breadcrumbs I threw on the ground, the more they '''quacked'''.''
+#: ''Do you hear the ducks '''quack'''?''
+
+=====Derived terms=====
+* [[quack like a duck‎]]
+
+=====Translations=====
+{{trans-top|to make a noise like a duck}}
+* Dutch: {{t-|nl|kwaken}}
+* Finnish: {{t-|fi|vaakkua}}
+* French: [[faire]] [[coin-coin]]
+* German: {{t+|de|quaken}}
+* [[Interlingua]]: [[quaccar]]
+* Italian: [[fare]] [[qua qua]]
+{{trans-mid}}
+* Japanese: {{qualifier|duck}} {{t|ja|ガーガーと鳴く|tr=gā-gā to naku|sc=Jpan}}, {{qualifier|colloquial|human}} {{t|ja|ガヤガヤしゃべる|tr=gayagaya shaberu|sc=Jpan}}
+* Romanian: [[măcăi]]
+* Russian: [[крякать]] (kr'ákat’) {{impf}}, [[крякнуть]] (kr'áknut’) {{pf}}
+* Spanish: [[decir]] [[cuac]]
+{{trans-bottom}}
+
+===Etymology 2===
+{{wikipedia}}
+shortening of  [[Quack-salver]] ([[Quack-saluer]]), from {{etyl|dum}} [[kwaksalver]] (modern [[kwakzalver]]), literally "hawker of salve", itself from [[quacken]] "to brag, boast, (literally) croak" + [[zalf]] "salve" 
+
+====Noun====
+{{en-noun}}
+
+# A fraudulent [[healer]] or incompetent [[doctor]] of [[medicine]], an [[impostor]] who claims to have qualifications to practice [[medicine]].
+#: ''That doctor is nothing but a lousy '''quack'''!''
+# A [[charlatan]]. <!-- #:''What a '''quack''' he is, saying that's an organic [[Viagra]]™ !'' -->
+# {{slang}} A [[doctor]].
+
+=====Quotations=====
+* '''1662''': ''Rump: or an Exact Collection of the Choycest Poems and Songs Relating to Late Times, Vol. II'', by ‘the most Eminent Wits’
+*: Tis hard to say, how much these Arse-wormes do urge us, We now need no '''Quack''' but these Jacks for to purge us, [...]
+* '''1720''': William Derham, ''Physico-theology''
+*: After ſome Months, the '''Quack''' gets privately to Town, [...]
+* '''1843''', [[:w:Thomas Carlyle|Thomas Carlyle]], ''[[:w:Past and Present (book)|Past and Present]]'', book 2, ch. 8, ''The Electon''
+*: ‘if we are ourselves valets, there shall ‘exist no hero for us; we shall not know the hero when we see him;’ - we shall take the '''quack''' for a hero; and cry, audibly through all ballot-boxes and machinery whatsoever, Thou art he; be thou King over us!
+
+=====Synonyms=====
+* See also [[Wikisaurus:deceiver]]
+
+=====Translations=====
 {{trans-top|fraudulent or incompetent doctor of medicine}}
 * Dutch: {{t+|nl|kwakzalver|m}}
 * Finnish: {{t+|fi|puoskari}}
@@ -74,51 +108,31 @@
 {{trans-bottom}}
 
 {{checktrans-top}}
-* French: [[toubib]] ''m'' (4)
+* {{ttbc|Danish}}: [[kvaksalver]] {{m}}
+* {{ttbc|French}}: [[toubib]] {{m}} (4)
 * {{ttbc|Indonesian}}: [[kwek-kwek]] (1), [[gadungan]] (2, 3)
 * {{ttbc|Interlingua}}: [[quac]] (1)
 {{trans-mid}}
 * {{ttbc|Polish}}: [[kwak]] (1) [[szarlatan]] (2,3) [[konował]] (4)
-* {{ttbc|Romanian}}: [[mac]] (1) [[şarlatan]] (2,3)
-* {{ttbc|Spanish}}: [[cuac]] (1); [[curandero]] ''m'' (2), [[matasanos]] {{m}} ''inv''
+* {{ttbc|Romanian}}: [[mac]] (1) [[şarlatan]] {{m}}
+* {{ttbc|Spanish}}: [[cuac]] (1); [[curandero]] {{m}}, [[matasanos]] {{m}} ''inv''
 {{trans-bottom}}
 
-====See also====
-* [[Quack-salver]] ([[Quack-saluer]])
+====Verb====
+{{en-verb}}
 
-===Adjective===
+# To practice, commit [[quackery]].
+
+=====Translations=====
+* Dutch: [[kwakzalveren]]
+
+====Adjective====
 {{en-adj|-}}
 
 # falsely presented as having [[medicinal]] [[power]]s.
-#: ''Don't get your hopes up; that's '''quack''' medicine!''
-
-===Verb===
-{{en-verb}}
-
-# To make a [[noise]] like a [[duck]].
-#: ''The more breadcrumbs I threw on the ground, the more they '''quacked'''.''
-#: ''Do you hear the ducks '''quack'''?''
-
-====Translations====
-{{trans-top|to make a noise like a duck}}
-* Dutch: {{t-|nl|kwaken}}
-* Finnish: {{t-|fi|vaakkua}}
-* French: [[faire]] [[coin-coin]]
-* German: {{t+|de|quaken}}
-* [[Interlingua]]: [[quaccar]]
-* Italian: [[fare]] [[qua qua]]
-{{trans-mid}}
-* Japanese: {{qualifier|duck}} {{t|ja|ガーガーと鳴く|tr=gā-gā to naku|sc=Jpan}}, {{qualifier|colloquial|human}} {{t|ja|ガヤガヤしゃべる|tr=gayagaya shaberu|sc=Jpan}}
-* Romanian: [[măcăi]]
-* Russian: [[крякать]] (kr'ákat’) {{impf}}, [[крякнуть]] (kr'áknut’) {{pf}}
-* Spanish: [[decir]] [[cuac]]
-{{trans-bottom}}
-
-====See also====
-* [[quack like a duck‎]]
+#:''Don't get your hopes up; that's '''quack''' medicine!''
 
 [[Category:Animal sounds]]
-[[Category:Dutch derivations]]
 [[Category:Onomatopoeia]]
 
 [[ar:quack]]
