/* Translations */ fi <maximum#6743301>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -62,7 +62,7 @@ MAAHX-im-muhm
 
 ====Translations====
 {{trans-top|highest degree}}
-* Finnish: {{t+|fi|maksimaalinen}}
+* Finnish: {{t+|fi|maksimi|alt=maksimi-}}
 * Italian: {{t+|it|massimo|m}}
 {{trans-mid}}
 * Spanish: {{t+|es|máximo}}
