t+fi:[[maksimi]] ([[WT:EDIT|Assisted]]) <maximum#6743302>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -47,6 +47,7 @@ MAAHX-im-muhm
 {{trans-top|greatest value}}
 * Chinese: [[極]][[大]][[值]] (zuidazhi, zui4da4zhi2)
 * Czech: {{t|cs|maximum|n}}
+* Finnish: {{t|fi|maksimi}}
 * German: {{t+|de|Maximum|n}}
 {{trans-mid}}
 * Italian: {{t+|it|massimo|m}}
