--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -37,11 +37,12 @@ Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] 
 
 =====Translations=====
 {{trans-top|police officer}}
+* French: {{t|fr|flic|m}}
 * Hungarian: {{t-|hu|zsaru}}
 * Norwegian: [[purk]] {{m}}
 * Polish: {{t+|pl|gliniarz|m}}, {{t+|pl|glina|m}}
-* Russian: {{t|ru|коп|m|tr=kop|sc=Cyrl}} (American), {{t|ru|мент|m|tr=ment|sc=Cyrl}}, {{t+|ru|мусор|m|tr=músor|sc=Cyrl}} {{italbrac|offensive}}
 {{trans-mid}}
+* Russian: {{t|ru|коп|m|tr=kop|sc=Cyrl}} (American), {{t|ru|мент|m|tr=ment|sc=Cyrl}}, {{t+|ru|мусор|m|tr=músor|sc=Cyrl}} {{italbrac|offensive}}
 * Slovak: [[poliš]] {{m}}, [[hekáč]] {{m}}
 * Spanish: {{t-|es|tombo|m}}, {{t+|es|paco|m}}
 * Swedish: {{t+|sv|snut}}
