t+es:[[pentagrama]] ([[WT:EDIT|Assisted]]) <staff#6743918>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -59,7 +59,7 @@
 * Italian: {{t+|it|pentagramma|m}}
 * Polish: {{t|pl|pięciolinia|f}}
 * Portuguese: {{t+|pt|pauta|f}}
-* Spanish: {{t-|es|varas|f|p}}
+* Spanish: {{t-|es|varas|f|p}},  {{t|es|pentagrama|f}}
 {{trans-bottom}}
 
 {{trans-top|employees of a business}}
