/* Translations */ <wild boar#6744866>

--- a/en/w/wild boar.8245.wikitext
+++ b/en/w/wild boar.8245.wikitext
@@ -31,7 +31,7 @@
 * Finnish: {{t-|fi|villisika}}
 * French: {{t+|fr|sanglier|m}}
 * [[Friulian]]: [[cenglâr]]
-* [[Galician]]: [[xabaril]], [[porco bravo]] {{m}}
+* [[Galician]]: {{t|gl|xabaril|m}}, {{t|gl|xabarín|m}}, [[porco bravo]] {{m}}
 * German: {{t+|de|Wildschwein|n}}
 * Greek: {{t+|el|αγριογούρουνο|n|tr=agriogοúrοuno|sc=Grek}}, {{t+|el|αγριόχοιρος|m|tr=agrióchoiros|sc=Grek}}
 * Hungarian: {{t-|hu|vaddisznó}}
