--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -144,6 +144,7 @@ From {{term|specio|speciō|see|lang=la}} + {{term|-ies|-iēs|lang=la}} suffix si
 [[la:species]]
 [[hu:species]]
 [[nl:species]]
+[[no:species]]
 [[pl:species]]
 [[ru:species]]
 [[simple:species]]
