--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -55,6 +55,7 @@ From {{etyl|la|es}} '''[[mundus]]''' "[[world]]"
 * [[mundillo]]
 
 [[ast:mundo]]
+[[cs:mundo]]
 [[de:mundo]]
 [[es:mundo]]
 [[fr:mundo]]
@@ -76,6 +77,6 @@ From {{etyl|la|es}} '''[[mundus]]''' "[[world]]"
 [[ru:mundo]]
 [[fi:mundo]]
 [[th:mundo]]
-[[vi:mundo]]
 [[tr:mundo]]
+[[vi:mundo]]
 [[zh:mundo]]
