--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -70,7 +70,7 @@
 * Latin: {{t-|la|denuo}}
 * Latvian: {{t-|lv|pret|xs=Latvian}}
 * Lithuanian: [[vėl]]
-* {{trreq|Malayalam}}
+* [[Malayalam]]: {{t|ml|വീണ്ടും|sc=Mlym}}
 * Maltese: [[darb' oħra]]
 * {{trreq|Maori}}
 * {{trreq|Mongolian}}
