--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -1,5 +1,5 @@
-{{wikipedia|dab=Blow}}
 ==English==
+{{wikipedia|dab=Blow}}
 
 ===Etymology 1===
 From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind instrument|lang=ang}} from {{proto|Germanic|blæanan}} from {{proto|Indo-European|bhle-}} "to swell, blow up".
@@ -38,9 +38,36 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 #: ''Let's '''blow''' this joint.''
 
 =====Derived terms=====
+{{rel-top|terms derived from ''blow'' (verb)}}
+* [[blow a gasket]]
 * [[blow a kiss]]
+* [[blow away]]
+* [[blow-by-blow]]
+* [[blower]]
+* [[blowhard]]
 * [[blow hot and cold]]
+* [[blow it]]
+* [[blowjob]]
+* [[blow me]]
+* [[blow off]]
+* [[blow off steam]]
+* [[blow one's chances]]
+* [[blow one's horn]]
+* [[blow one's top]]
+{{rel-mid}}
+* [[blow one's trumpet]]
+* [[blow out]]
+* [[blowout]]
+* [[blow over]]
+* [[blow someone's brains out]]
+* [[blow the whistle]]
+* [[blow up]]
+* [[blowup]]
+* [[blow up in one's face]]
 * [[glassblower]]
+* [[mind-blowing]]
+* [[there she blows]]
+{{rel-bottom}}
 
 =====Translations=====
 {{trans-top|produce an air current}} <!--1-->
@@ -174,6 +201,30 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * {{ttbc|Telugu}}: [[ఊదు]] (oodu), [[కొట్టుకొనిపోవు]] (koTTukonipOvu), [[వీచు]] (veecu)
 {{trans-bottom}}
 
+====Anagrams====
+* [[bowl]]
+
+===Etymology 2===
+{{etyl|enm|en}} {{term|blowe|lang=enm}}, {{term|blaw|lang-enm}}. (Akin to Old High German {{term|bliuwan||lang=goh|to beat", "strike}} (Gernam {{term|bläuen|lang=deu}}, Gothic {{term|bliggwan}}))
+
+====Noun====
+{{en-noun}}
+
+# The act of [[striking]] or [[hit]]ting:<!--1-->
+#: ''A fabricator is used to direct a sharp '''blow''' to the surface of the stone.''
+#: ''During an exchange to end round 13, Duran landed a '''blow''' to the mid-section.''
+# An [[unfortunate]] [[occurrence]]:<!--2-->
+#: ''A further '''blow''' to the group came in 1917 when Thomson died while canoeing in Algonquin Park.''
+# {{uncountable}} {{slang}} [[cocaine|Cocaine]].<!--3-->
+# A strong [[wind]]:<!--4-->
+#: ''We're having a bit of a '''blow''' this afternoon.''
+# {{informal}} A chance to catch one’s breath:<!--5-->
+#: ''The players were able to get a '''blow''' during the last timeout.''
+
+=====Derived terms=====
+* [[body blow]]
+* [[low blow]]
+
 =====Translations=====
 {{trans-top| act of striking or hitting}}
 * Armenian: {{t-|hy|հարված|tr=harvaç|sc=Armn|xs=Armenian}}
@@ -210,58 +261,6 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-mid}}
 * Russian: [[передышка]] (p'er'edýška) {{f}}
 {{trans-bottom}}
-
-=====Derived terms=====
-{{rel-top|terms derived from ''blow'' (verb)''}}
-* [[blow a gasket]]
-* [[blow away]]
-* [[blow-by-blow]]
-* [[blower]]
-* [[blowhard]]
-* [[blow hot and cold]]
-* [[blow it]]
-* [[blowjob]]
-* [[blow me]]
-* [[blow off]]
-* [[blow off steam]]
-* [[blow one's chances]]
-* [[blow one's horn]]
-* [[blow one's top]]
-{{rel-mid}}
-* [[blow one's trumpet]]
-* [[blow out]]
-* [[blowout]]
-* [[blow over]]
-* [[blow someone's brains out]]
-* [[blow the whistle]]
-* [[blow up]]
-* [[blowup]]
-* [[blow up in one's face]]
-* [[body blow]]
-* [[low blow]]
-* [[mind-blowing]]
-* [[there she blows]]
-{{rel-bottom}}
-
-====Anagrams====
-* [[bowl]]
-
-===Etymology 2===
-{{etyl|enm|en}} {{term|blowe|lang=enm}}, {{term|blaw|lang-enm}}. (Akin to Old High German {{term|bliuwan||lang=goh|to beat", "strike}} (Gernam {{term|bläuen|lang=deu}}, Gothic {{term|bliggwan}}))
-
-====Noun====
-{{en-noun}}
-
-# The act of [[striking]] or [[hit]]ting:<!--1-->
-#: ''A fabricator is used to direct a sharp '''blow''' to the surface of the stone.''
-#: ''During an exchange to end round 13, Duran landed a '''blow''' to the mid-section.''
-# An [[unfortunate]] [[occurrence]]:<!--2-->
-#: ''A further '''blow''' to the group came in 1917 when Thomson died while canoeing in Algonquin Park.''
-# {{uncountable}} {{slang}} [[cocaine|Cocaine]].<!--3-->
-# A strong [[wind]]:<!--4-->
-#: ''We're having a bit of a '''blow''' this afternoon.''
-# {{informal}} A chance to catch one’s breath:<!--5-->
-#: ''The players were able to get a '''blow''' during the last timeout.''
 
 ===Etymology 3===
 {{etyl|enm|en}} {{term|blowen|lang=enm}} from {{etyl|ang|en}} {{term|blowan|blōwan|lang=ang}}
