--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -96,7 +96,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 * Maltese: {{t-|mt|teorija|xs=Maltese}}
 * Norwegian: {{t-|no|teori|m}}
 * Portuguese: {{t+|pt|teoria|f}}
-* Russian: {{t+|ru|теория|f|tr=t'eórija|sc=Cyrl}}, {{t|ru|гипотеза|f|tr=gipót'eza|sc=Cyrl}}
+* Russian: {{t+|ru|теория|f|tr=teórija|sc=Cyrl}}, {{t|ru|гипотеза|f|tr=gipóteza|sc=Cyrl}}
 * Spanish: {{t-|es|teoría|f}}
 * Swedish: {{t+|sv|teori|c}}
 {{trans-bottom}}
@@ -112,7 +112,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 * [[Macedonian]]: {{t|mk|теорија|f|tr=teórija|sc=Cyrl}}
 * Norwegian: {{t-|no|idé|m}}, {{t-|no|teori|m}}
 * Portuguese: {{t+|pt|teoria|f}}
-* Russian: {{t+|ru|теория|f|tr=t'eórija|sc=Cyrl}}
+* Russian: {{t+|ru|теория|f|tr=teórija|sc=Cyrl}}
 * Spanish: {{t-|es|teoría|f}}
 * Swedish: {{t+|sv|idé|c}}, {{t+|sv|teori|c}}
 {{trans-bottom}}
@@ -132,7 +132,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 * Maltese: {{t-|mt|teorija|xs=Maltese}}
 * Norwegian: {{t-|no|teori|m}}
 * Portuguese: {{t+|pt|teoria|f}}
-* Russian: {{t+|ru|теория|f|tr=t'eórija|sc=Cyrl}}
+* Russian: {{t+|ru|теория|f|tr=teórija|sc=Cyrl}}
 * Spanish: {{t-|es|teoría|f}}
 * Swedish: {{t+|sv|teori|c}}
 {{trans-bottom}}
@@ -146,7 +146,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 {{trans-mid}}
 * Norwegian: {{t-|no|teori|m}}
 * Portuguese: {{t+|pt|teoria|f}}
-* Russian: {{t+|ru|теория|f|tr=t'eórija|sc=Cyrl}}
+* Russian: {{t+|ru|теория|f|tr=teórija|sc=Cyrl}}
 * Spanish: {{t-|es|teoría|f}}
 * Swedish: {{t+|sv|teori|c}}
 {{trans-bottom}}
@@ -165,7 +165,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 * Maltese: {{t-|mt|teorija|xs=Maltese}}
 * Norwegian: {{t-|no|teori|m}}
 * Portuguese: {{t+|pt|teoria|f}}
-* Russian: {{t+|ru|теория|f|tr=t'eórija|sc=Cyrl}}
+* Russian: {{t+|ru|теория|f|tr=teórija|sc=Cyrl}}
 * Spanish: {{t-|es|teoría|f}}
 * Swedish: {{t+|sv|teori|c}}
 {{trans-bottom}}
@@ -187,13 +187,13 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 
 {{checktrans-top}}
 * {{ttbc|Arabic}}: {{Arab|[[نظرية]]}} {{unicode|(naʐaríya)}} {{f}}
-* {{ttbc|Chinese}}: [[理论]]/[[理論]] (lǐlùn); [[论]]/[[論]] (lùn); [[学说]]/[[學説]] (xuéshuō); [[道理]] (dàolǐ)
-* {{ttbc|Indonesian}}: [[teori]]
-* {{ttbc|Italian}}: [[teoria]] {{f}}
+* {{ttbc|Chinese}}: {{zh|tsp|理論|理论|lǐlùn}}; {{zh|tsp|論|论|lùn}}; {{zh|tsp|學説|学说|xuéshuō}}; [[道理]] (dàolǐ)
+* {{ttbc|Indonesian}}: {{t|id|teori}}
+* {{ttbc|Italian}}: {{t|it|teoria|f}}
 {{trans-mid}}
 * {{ttbc|Korean}}: [[이론]] (iron)
-* {{ttbc|Turkish}}: [[teori]]
-* {{ttbc|Vietnamese}}: [[thuyết; lý thuyết]]
+* {{ttbc|Turkish}}: {{t|tr|teori}}
+* {{ttbc|Vietnamese}}: {{t|vi|thuyết}}, {{t|vi|lý thuyết}}
 {{trans-bottom}}
 
 ===See also===
