--- a/en/u/unsoundness.742255.wikitext
+++ b/en/u/unsoundness.742255.wikitext
@@ -14,6 +14,7 @@ From {{term|un-}} + {{term|sound}} + {{term|-ness}}.
 *[[sound]]
 *[[unsound]]
 
+[[de:unsoundness]]
 [[ta:unsoundness]]
 [[te:unsoundness]]
 [[vi:unsoundness]]
