t+mk:[[свиња]] ([[WT:EDIT|Assisted]]) <pig#6793566>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -143,6 +143,7 @@
 * Finnish: {{t+|fi|porsas}}, {{t+|fi|sika}}
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
 * Italian: {{t+|it|porco|m}}, {{t+|it|maiale|m}}
+* [[Macedonian]]: {{t|mk|свиња|f|tr=svínja|sc=Cyrl}}
 * Welsh: {{t-|cy|mochyn|m|xs=Welsh}}
 {{trans-bottom}}
 
