--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -158,6 +158,7 @@
 * Italian: {{t+|it|bastardo|m}}, {{t+|it|bastarda|f}}, {{t+|it|stronzo|m}}, {{t-|it|stronza|f}}
 {{trans-mid}}
 * Latvian: {{t+|lv|cūka|f|xs=Latvian}}
+* [[Macedonian]]: {{t|mk|свиња|f|tr=svínja|sc=Cyrl}}
 * Russian: [[свинья]] (svin’já) {{f}}
 * Serbian:
 *: Cyrillic: [[свиња#Serbian|свиња]] {{f}}
