/* Hungarian */ expanded <bent#6798274>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -106,12 +106,17 @@ Origin uncertain.  Apparently representing {{etyl|ang}} {{term||beonet-}} (attes
 
 ==Hungarian==
 
+===Pronunciation===
+* {{IPA|/ˈbɛnt/|lang=hu}}
+* {{hyphenation|bent}}
+
 ===Adverb===
-'''bent'''
+{{infl|hu|adverb}}
 
 # [[inside]]
 
-[[Category:Hungarian adverbs]]
+====Synonyms====
+* [[benn]]
 
 ----
 
