iwiki +[[:de:thing]] <thing#6799911>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -219,6 +219,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 [[ang:thing]]
 [[ar:thing]]
 [[zh-min-nan:thing]]
+[[de:thing]]
 [[dv:thing]]
 [[et:thing]]
 [[el:thing]]
