--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -25,12 +25,14 @@ Used with the definite article {{term|the}}.
 
 ====Translations====
 {{trans-top|geographical region in the southeast of Europe}}
+* Armenian: {{t|hy|Բալկաններ|tr=Balkanner|sc=Armn}}
 * [[Asturian]]: {{t-|ast|Balcanes|m|xs=Asturian}}
 * French: {{t+|fr|Balkans|m}}
 * Hungarian: {{t+|hu|Balkán}}
 {{trans-mid}}
 * [[Macedonian]]: [[Балкан]] (Bálkan) {{m}}
 * Polish: {{t-|pl|Bałkany}}
+* Russian: {{t|ru|Балканы|m|p|tr=Balkány|sc=Cyrl}}
 * Turkish: {{t+|tr|Balkanlar}}
 {{trans-bottom}}
 
