--- a/en/t/trash can.775500.wikitext
+++ b/en/t/trash can.775500.wikitext
@@ -19,6 +19,7 @@
 * Dutch: {{t+|nl|vuilnisbak|m}}
 * Finnish: {{t-|fi|jäteastia}}, {{t+|fi|roskakori}}, {{t|fi|roskapönttö}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|корпа за отпадоци|f|tr=kórpa za otpádoci|sc=Cyrl}},  {{t|mk|канта за ѓубре|f|tr=kánta za ǵúbre|sc=Cyrl}}
 * Spanish: {{t|es|tacho de basura|m}}
 * Turkish: {{t|tr|çöp kutusu}},  {{t|tr|çöp tenekesi}},  {{t+|tr|çöp}}
 {{trans-bottom}}
