--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -460,7 +460,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 ====Translations====
 {{trans-top|instance of breaking something into two pieces}}
 * German: {{t+|de|Bruch|m}}
-* Hebrew: [[שבירה]] (shvira) {{f}}
+* Hebrew: {{t-|he|שבירה|f|alt=שְׁבִירָה|sc=Hebr|tr=sh'virá}}
 {{trans-mid}}
 * Latvian: {{t-|lv|lūšana|f|xs=Latvian}}
 * Swedish: {{t+|sv|brott|n}}
