--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -25,6 +25,7 @@ Used with the definite article {{term|the}}.
 
 ====Translations====
 {{trans-top|geographical region in the southeast of Europe}}
+* [[Ancient Greek]]: {{tø|grc|Χερσόνησος τοῦ Αἵμου|m|tr=Khersonēsos tou Aimou|sc=polytonic}}
 * Armenian: {{t|hy|Բալկաններ|tr=Balkanner|sc=Armn}}
 * [[Asturian]]: {{t-|ast|Balcanes|m|xs=Asturian}}
 * French: {{t+|fr|Balkans|m}}
