--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -33,6 +33,7 @@ Used with the definite article {{term|the}}.
 {{trans-mid}}
 * [[Macedonian]]: [[Балкан]] (Bálkan) {{m}}
 * Polish: {{t-|pl|Bałkany}}
+* Portuguese: {{t|pt|Balcãs|m|p}}
 * Russian: {{t|ru|Балканы|m|p|tr=Balkány|sc=Cyrl}}
 * Turkish: {{t+|tr|Balkanlar}}
 {{trans-bottom}}
