--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -14,7 +14,7 @@ Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond th
 # {{obsolete}} Clothes, now always used in plural form [[duds]].
 
 ====Translations====
-{{trans-top|a broken or nonfunctional device that does not perform its intended function}}
+{{trans-top|a broken or nonfunctional device that does not perform its intended function}}lemon
 * Finnish: [[susi]], [[suutari]]
 * German: [[Blindgänger]] {{m}}
 {{trans-mid}}
