--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -10,7 +10,7 @@ Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond th
 ===Noun===
 '''dud''' (''plural:'' [[duds]])
 
-# A broken or nonfunctional device that does not perform its intended function, such as a [[bomb]].
+# A broken or nonfunctional device that does not perform its intended function, such as a [[bomb]] or [[lemon]].
 # {{obsolete}} Clothes, now always used in plural form [[duds]].
 
 ====Translations====
