t+sw:[[nguruwe]] ([[WT:EDIT|Assisted]]) <pig#6822571>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -144,6 +144,7 @@
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
 * Italian: {{t+|it|porco|m}}, {{t+|it|maiale|m}}
 * [[Macedonian]]: {{t|mk|свиња|f|tr=svínja|sc=Cyrl}}
+* Swahili: {{t|sw|nguruwe}}
 * Welsh: {{t-|cy|mochyn|m|xs=Welsh}}
 {{trans-bottom}}
 
@@ -164,6 +165,7 @@
 *: Cyrillic: [[свиња#Serbian|свиња]] {{f}}
 *: Roman: [[svinja#Serbian|svinja]] {{f}}
 * Slovene: [[svinja]] {{f}}, [[prasec]] {{m}}
+* Swahili: {{t|sw|nguruwe}}
 * Welsh: {{t-|cy|mochyn|m|xs=Welsh}}
 {{trans-bottom}}
 
@@ -184,6 +186,7 @@
 *: Cyrillic: [[свиња#Serbian|свиња]] {{f}}
 *: Roman: [[svinja#Serbian|svinja]] {{f}}
 * Slovene: {{t+|sl|prašič|m}}
+* Swahili: {{t|sw|nguruwe}}
 * Welsh: {{t-|cy|mochyn|m|xs=Welsh}}
 {{trans-bottom}}
 
