--- a/en/b/biatch.741988.wikitext
+++ b/en/b/biatch.741988.wikitext
@@ -15,3 +15,4 @@
 #*: This trail isn't merely hell, it's a full blown '''biatch'''!
 
 [[de:biatch]]
+hello. i have 1000000000 kids. Soooooo... yeah. i'm pretty cool
