--- a/en/b/blew.6804.wikitext
+++ b/en/b/blew.6804.wikitext
@@ -15,6 +15,17 @@
 
 [[Category:English irregular simple past forms]]
 
+----
+
+==Welsh==
+===Noun===
+'''blew''' (plural '''blew''')
+
+# [[hair#Noun|hair]]
+# [[fur#Noun|fur]]
+
+[[Category:Welsh nouns]]
+
 [[el:blew]]
 [[es:blew]]
 [[fr:blew]]
