t+io:[[ruptar]] ([[WT:EDIT|Assisted]]) <break#6832584>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -133,6 +133,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * {{trreq|Hindi}}
 * Hungarian: [[törik]], [[eltörik]]
 * {{trreq|Icelandic}}
+* [[Ido]]: {{t|io|ruptar}}
 * Italian: {{t+|it|rompere}}
 * Japanese: [[割れる]] (wareru), [[散らばる]] (chirabaru)
 {{trans-mid}}
