--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -54,6 +54,7 @@
 * {{trreq|Hebrew}}
 * {{trreq|Hindi}}
 * Hungarian: {{t+|hu|egyszerű}}
+* [[Ido]]: {{t|io|simpla}}
 * Italian: {{t+|it|semplice}}
 * Japanese: [[簡単な]] (kantan na), [[単純な]] (tanjun na)
 * Korean: [[간단한]] (gandanhan)
