/* English */ replace image <bubble#6835595>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -1,6 +1,6 @@
 {{wikipedia}}
 ==English==
-[[Image:Soap Bubble - foliage background - iridescent colours - Traquair 040801.jpg|thumb|right|Soap bubbles.]]
+[[File:Reflection_in_a_soap_bubble_edit.jpg|thumb|A soap bubble.]]
 
 ===Etymology===
 Partly imitative, also influenced by {{term|burble}}.
