--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -1,5 +1,6 @@
 {{wikipedia|dab=bend}}
 ==English==
+[[File:Grand_Canyon_Horse_Shoe_Bend_MC.jpg|thumb|A bend in a river]]
 
 ===Etymology===
 From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend (a bow).
