--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -28,13 +28,59 @@
 ====Antonyms====
 * {{sense|having few parts or features}} [[complex]], [[compound]], [[complicated]]
 
-====Related terms====
+====Derived terms====
+{{der-top}}
+* [[fee simple]]
+* [[future simple]]
+* [[oversimple]]
+* [[past simple]]
+* [[plain and simple]]
+* [[present simple]]
+* [[pure and simple]]
+* [[simple beam]]
+* [[simple connectivity]]
+* [[simple contract]]
+* [[simple dislocation]]
+* [[simple equation]]
+* [[simple extension]]
+* [[simple eye]]
+* [[simple fraction]]
+* [[simple fracture]]
+* [[simple fruit]]
+* [[simple function]]
+* [[simple future]]
+* [[simple group]]
+* [[simple harmonic motion]]
+* [[simple-hearted]]
+* [[simple interest]]
+* [[simple leaf]]
+* [[simple linear regression]]
+{{der-mid}}
+* [[simple machine]]
+* [[simple mastectomy]]
+* [[simple microscope]]
+* [[simple-minded]]
+* [[simple past]]
+* [[simple pendulum]]
+* [[simple pistil]]
+* [[simple pole]]
+* [[simple present]]
+* [[simple protein]]
+* [[simple regression]]
+* [[simple sentence]]
+* [[Simple Simon]]
+* [[simple sugar]]
+* [[simple syrup]]
+* [[simple time]]
+* [[simple trust]]
+* [[simpleness]]
+* [[simpless]]
 * [[simplex]]
 * [[simply]]
 * [[single]]
 * [[simplicity]]
 * [[simpleton]]
-
+{{der-bottom}}
 ====Translations====
 {{trans-top|uncomplicated}}
 * {{trreq|Albanian}}
