/* Derived terms */ [[simplehead]] <simple#6841215>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -73,6 +73,7 @@
 * [[simple syrup]]
 * [[simple time]]
 * [[simple trust]]
+* [[simplehead]]
 * [[simpleness]]
 * [[simpless]]
 * [[simplex]]
@@ -81,6 +82,7 @@
 * [[simplicity]]
 * [[simpleton]]
 {{der-bottom}}
+
 ====Translations====
 {{trans-top|uncomplicated}}
 * {{trreq|Albanian}}
