--- a/en/b/burqa.803246.wikitext
+++ b/en/b/burqa.803246.wikitext
@@ -6,9 +6,5 @@
 # {{alternative form of|burka}}
 
 ====Translations====
-{{trans-top|burqa}}
-''See:'' [[burka]]
-{{trans-mid}}
-{{trans-bottom}}
-
+{{trans-see|burqa|burka}}
 [[fr:burqa]]
