--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -43,6 +43,7 @@
 * [[Ido]]: [[bastono]]
 * Indonesian: [[toya]]
 * Italian: {{t+|it|bastone|m}}
+* [[Macedonian]]: {{t|mk|стап|m|tr=stap|sc=Cyrl}}
 * Portuguese: {{t+|pt|bengala|f}}
 * [[Scottish Gaelic]]: {{t-|gd|bata|m|xs=Scottish Gaelic}}
 * Serbian: [[štap]] {{m}}/[[штап]] {{m}}
