t+mk:[[петолиние]] ([[WT:EDIT|Assisted]]) <staff#6879735>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -58,6 +58,7 @@
 * German: [[Notenlinien]] {{f|p}}
 {{trans-mid}}
 * Italian: {{t+|it|pentagramma|m}}
+* [[Macedonian]]: {{t|mk|петолиние|n|tr=petolínie|sc=Cyrl}}
 * Polish: {{t|pl|pięciolinia|f}}
 * Portuguese: {{t+|pt|pauta|f}}
 * Spanish: {{t-|es|varas|f|p}},  {{t|es|pentagrama|f}}
