t+mk:[[персонал]] t+mk:[[кадар]] ([[WT:EDIT|Assisted]]) <staff#6879738>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -73,6 +73,7 @@
 * German: {{t+|de|Belegschaft|f}}, {{t+|de|Personal|n}}
 * Italian: {{t+|it|personale|m}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|персонал|m|tr=personál|sc=Cyrl}},  {{t|mk|кадар|m|tr=kádar|sc=Cyrl}}
 * Polish: {{t|pl|personel|m}}
 * Portuguese: {{t+|pt|pessoal|m}}
 * Russian: {{t+|ru|персонал|m|sc=Cyrl}}
