/* Noun */ It's American, too. <at#6885670>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -162,7 +162,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{British}} the [[@]] symbol.
+# the [[@]] symbol.
 
 [[Category:100 English basic words]]
 [[Category:English two-letter words]]
