t+mk:[[во]] ([[WT:EDIT|Assisted]]) <at#6888054>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -111,6 +111,7 @@
 * Korean: [[~에]] (~e)
 * Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
 * Latin: ''[[ablative]] case''
+* [[Macedonian]]: {{t|mk|во|tr=vo|sc=Cyrl}}
 * Maltese: [[fi]]
 * [[Novial]]: [[ye]]
 * Polish: [[o]], [[w#Polish|w]]
