t+mk:[[во]] t+mk:[[на]] ([[WT:EDIT|Assisted]]) <at#6888059>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -147,6 +147,7 @@
 * Japanese: [[に]] (ni), [[を]] (o)
 * Korean: [[~에게]] (-ege)
 * Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
+* [[Macedonian]]: {{t|mk|во|tr=vo|sc=Cyrl}},  {{t|mk|на|tr=na|sc=Cyrl}}
 * Norwegian: [[på]]
 * [[Novial]]: [[vers]], [[a]]
 * Polish: [[na#Polish|na]], [[do#Polish|do]]
