--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -139,6 +139,8 @@ Partly imitative, also influenced by {{term|burble}}.
 * {{R:New Geordie Dictionary 1987}}
 * {{R:Northeast Dialect 2005}}
 
+[[Category:Reduplication]]
+
 [[ar:bubble]]
 [[et:bubble]]
 [[el:bubble]]
