/* Adjective */ improper quote, headword in italics <manqués#6892433>

--- a/en/m/manqués.741511.wikitext
+++ b/en/m/manqués.741511.wikitext
@@ -8,8 +8,8 @@
 {{en-adj|-}}
 
 # {{postpositive}} Plural form of '''[[manqué#English|manqué]]'''.
-#* '''1879''': A<small>UTHOR UNKNOWN</small>, ''Blackwood’s Edinburgh Magazine'', p101
-#*: …character of his work, its broken lights, its aimless passions, its catastrophes '''manqués''', may be serving a better purpose than any regularity of art.
+#* {{context|quote|headword in italics}} '''1879''': A<small>UTHOR UNKNOWN</small>, ''Blackwood’s Edinburgh Magazine'', p101
+#*: …character of his work, its broken lights, its aimless passions, its catastrophes '''''manqués''''', may be serving a better purpose than any regularity of art.
 #* '''1983''': David Roger Oldroyd & Ian Langham, ''The Wider Domain of Evolutionary Thought'', p9
 #*: Naturism is in the romantic tradition and, to some extent, the naturist writers are natural historians '''''manqués'''''.
 #* '''1991''': Ilya Zemtsov, ''Encyclopedia of Soviet Life'', p221
