--- a/en/m/manqués.741511.wikitext
+++ b/en/m/manqués.741511.wikitext
@@ -8,12 +8,10 @@
 {{en-adj|-}}
 
 # {{postpositive}} Plural form of '''[[manqué#English|manqué]]'''.
-#* {{context|quote|headword in italics}} '''1879''': A<small>UTHOR UNKNOWN</small>, ''Blackwood’s Edinburgh Magazine'', p101
-#*: …character of his work, its broken lights, its aimless passions, its catastrophes '''''manqués''''', may be serving a better purpose than any regularity of art.
-#* {{context|quote|headword in italics}} '''1983''': David Roger Oldroyd & Ian Langham, ''The Wider Domain of Evolutionary Thought'', p9
-#*: Naturism is in the romantic tradition and, to some extent, the naturist writers are natural historians '''''manqués'''''.
 #* '''1991''': Ilya Zemtsov, ''Encyclopedia of Soviet Life'', p221
 #*: Party functionaries at all levels are essentially dilettantes who may have diplomas or study certificates but not real competence. Basically, they are educational failures: engineers '''manqués''', journalists '''manqués''',<!-- In the source text, this word was hyphenated thus: [man-qués] due to line justification. --> scientists '''manqués'''.
+#* '''2004''': Emanuel Derman, ''My Life as a Quant: Reflections on Physics and Finance'', p14
+#*: None of these papers had much chance of getting past a journal referee. Few of the writers had much hope of even getting into graduate school. They may not have wanted to. The letters were mostly a ''cri de cœur'' from isolated and solitary physicists '''manqués''' all over the world.
 #* '''2006''': Harry Mount, ''Amo, Amas, Amat… and all that: How to become a Latin lover'' ([[ISBN]]: 1–904977–54–5 [978–1–904977–54–4]), chapter Ⅵ: <i>To all the Sirs I’ve loved Before — L<small>ATIN TEACHERS</small> I <small>HAVE KNOWN</small></i>, p97
 #*: The classics master is a quick literary shortcut to encapsulating a lonely, highly intelligent man dedicated to his subject, and often to his pupils. They are never in fiction — and rarely in real life — female. They are often dons '''manqués''' — men who, due to a personality fault, or an unfortunate incident with a boy, never made it as academics. And so they become, life Dr Rutherford, substitute dons at school, keen on building up one-to-one relationships with the pupils and dismissive of their contemporaries in the school common-room.
 
