--- a/en/n/Niphon.775906.wikitext
+++ b/en/n/Niphon.775906.wikitext
@@ -1,8 +1,9 @@
 ==English==
 
 ===Etymology===
-From Japanese [[日本]] (formerly ''Niffon'', now ''Nippon'' or ''Nihon'') "Japan".
+From {{etyl|ja|sort=niphon}} [[日本]] (formerly ''Niffon'', now ''Nippon'' or ''Nihon'') "Japan".
 
+From Japanese 
 ===Proper noun===
 {{en-proper-noun}}
 
