--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -17,6 +17,7 @@ Perhaps a calque of the Latin phrase [[potiusque sero quam nunquam]] from the 4t
 * Arabic: {{t|ar|أن يأتي متأخرا خير من أن لا يأتي أبدا|alt=أن يأتي متأخرًا خير من أن لا يأتي أبدًا|sc=Arab}}
 * [[Basque]]: {{t|eu|hobe da berandu sekula baino|xs=Basque}}
 * [[Breton]]: {{t|br|gwelloc'h diwezhat eget gwech ebet|xs=Breton}}
+* Bulgarian: {{t|bg|по-добре късно отколкото никога|tr=po-dobre kusno otkolkoto nikoga|sc=Cyrl}}
 * Czech: {{t-|cs|lepší pozdě než nikdy}}
 * Danish: {{t|da|bedre sent end aldrig}}
 * Dutch: {{t|nl|beter laat dan nooit}}
