--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -103,6 +103,39 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 
 [[Category:Dutch suffixes|um]]
 
+==Turkish==
+
+===Suffix===
+'''-um'''
+
+# First-person singular possessive suffix denoting singular possession in words ending in a consonant.
+#: ''[[okul]] - [[okulum]]''
+#:: school - my school
+#: ''[[yol]] - [[yolum]]''
+#:: way - my way
+# Conjugation of the verb "to be" for first person singular, simple present tense.
+#: ''[[masum]] - [[masumum]]''
+#:: innocent - I am innocent
+
+===Usage notes=== 
+* If the noun ends in a vowel, it becomes "[[-m]]" (for the possession suffix)
+*: ''[[soru]] - [[sorum]]''
+* It's used only when the word's last vowel is "o" or "u". It may change into "[[-im]]", "[[-ım]]" and "[[-üm]]" according to the last vowel of the word. (possession suffix)
+*: ''[[ev]] - [[evim]]'' (the last vowel is "e" or "i")
+*: ''[[kız]] - [[kızım]]'' (the last vowel is "a" or "ı")
+*: ''[[yüz]] - [[yüzüm]]'' (the last vowel is "ö" or "ü")
+* If the word ends in "p", "ç", "t" or "k", it may change them into "b", "c", "d" and "ğ".
+*: ''[[grup]] - [[grubum]]"
+*: ''[[burç]] - [[burcum]]''
+*: ''[[periyot]] - [[periyodum]]''
+*: ''[[çocuk]] - [[çocuğum]]''
+* It may cause the last vowel of the word dropped.
+*: ''[[burun|bur'''u'''n]] - [[burnum|'''burn'''um]]"
+* If the word ends in a vowel, it's used with an auxiliary consonant; "y". (for the verb to be)
+*: ''[[mutlu]] - [[mutluyum]]''
+
+[[Category:Turkish suffixes|um]]
+
 [[da:-um]]
 [[et:-um]]
 [[fr:-um]]
