--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -32,6 +32,7 @@
 #:* The '''pig''' was cracked, and molten metal was oozing from the side.
 # {{engineering}} A device for cleaning or inspecting the inside of an oil or gas [[pipeline]], or for separating different substances within the pipeline. Named for the pig-like squealing noise made by their progress.
 #:* Unfortunately, the '''pig''' sent to clear the obstruction got lodged in a tight bend, adding to the problem.
+#{{UK}} a [[pigeon]].
 
 ====Translations====
 {{trans-top|mammal of genus ''Sus''}}
