--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -116,7 +116,7 @@
 * Slovak: [[prasa]] {{n}} (1)
 * Slovene: [[svinja]] {{f}}, [[prašič]] {{m}}, [[pujs]] {{m}}
 * Spanish: [[cerdo]] {{m}}, [[chancho]] {{m}} {{italbrac|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, [[chon]] {{m}} {{italbrac|Northern Central Spain|specifically Cantabria}}, [[coche]] {{m}} {{italbrac|Guatemala}}, [[cochi]] {{m}} {{italbrac|Northwestern Mexico}}, [[cochín]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[cochino]] {{m}} {{italbrac|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, [[cocho]] {{m}} {{italbrac|Northern Spain|specifically Leon}}, [[cuchi]] {{m}} {{italbrac|Northern Central and Northwestern Argentina}}, [[cuto]] {{m}} {{italbrac|Northern Spain - specifically Aragon, La Rioja and Navarra}}, [[gocho]] {{m}} {{italbrac|Northern Spain|specifically Asturias and Leon}}, [[gorrino]] {{italbrac|Southern Central and Eastern Central Spain}}, [[guarro]] {{m}} {{italbrac|Western Spain|specifically Extremadura}}, [[marrano]] {{m}} {{italbrac|Central and Western Venezuela|Colombia}}, [[puerco]] {{m}} {{italbrac|Caribbean Islands|Costa Rica|Mexico|Panama}}, [[tocino]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[tunco]] {{m}} {{italbrac|El Salvador}}
-* Swahili: {{t+|sw|nguruwe|xs=Swahili}}
+* Swahili: {{t+|sw|nguruwe|xs=Swahili}},  {{t|sw|nguruwe}}
 * Swedish: {{t+|sv|gris|c}}, {{t+|sv|svin|n}}
 * [[Tagalog]]: [[baboy]]
 * [[Taos]]: [[kùci’ína]]
@@ -198,27 +198,32 @@
 {{trans-mid}}
 * Norwegian: {{t+|no|purk|m}}
 * Spanish: [[milico]] {{m}} {{italbrac|Andes|River Plate region}}
+* Swahili: {{t|sw|nguruwe}}
 {{trans-bottom}}
 
 {{trans-top|difficult problem}}
 * Finnish: {{t+|fi|pähkinä}}
 {{trans-mid}}
+* Swahili: {{t|sw|nguruwe}}
 {{trans-bottom}}
 
 {{trans-top|cast metal block}}
 * Finnish: {{t+|fi|harkko}}
 {{trans-mid}}
 * Russian: {{t+|ru|чушка|tr=čúška|sc=Cyrl}}, {{t+|ru|болванка|f|tr=bolvánka|sc=Cyrl}}
+* Swahili: {{t|sw|nguruwe}}
 {{trans-bottom}}
 
 {{trans-top|mould for a cast metal block}}
 * Finnish: {{t+|fi|muotti}}
 {{trans-mid}}
+* Swahili: {{t|sw|nguruwe}}
 {{trans-bottom}}
 
 {{trans-top|device to clean or inspect a pipe from inside}}
 * Finnish: {{t+|fi|porsas}}
 {{trans-mid}}
+* Swahili: {{t|sw|nguruwe}}
 {{trans-bottom}}
 
 {{checktrans-top}}
