iwiki +[[:zh:Faraday rotation]] <Faraday rotation#6905763>

--- a/en/f/Faraday rotation.774454.wikitext
+++ b/en/f/Faraday rotation.774454.wikitext
@@ -11,3 +11,5 @@ From [[w:Michael Faraday|Michael Faraday]], who first described the effect.
 
 ====Synonyms====
 *[[Faraday effect]]
+
+[[zh:Faraday rotation]]
