--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -27,6 +27,7 @@
 * French: {{t+|fr|siffler}}
 * Hungarian: {{t+|hu|fütyül}}
 * Irish: [[lig fead]]
+* Portuguese: {{t|pt|assoviar}}
 * Russian: {{t|ru|свистеть|tr=svist'ét’|sc=Cyrl}} {{impf}}, {{t|ru|свистнуть|tr=svístnut’|sc=Cyrl}} {{pf}}
 * Serbian: {{t|sr|zvižduk|m}}
 * Spanish: {{t+|es|silbar}},  {{t+|es|chiflar}},  {{t+|es|pitar}}
