t+ru:[[металлург]] t+be:[[металург]] t+bg:[[металург]] ([[WT:EDIT|Assisted]]) <metallurgist#6911330>

--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -8,8 +8,11 @@
 
 ====Translations====
 {{trans-top|person skilled in metallurgy}}
+* Belarusian: {{t|be|металург|m|sc=Cyrl}}
+* Bulgarian: {{t|bg|металург|m|sc=Cyrl}}
 * Finnish: {{t+|fi|metallurgi}}
 {{trans-mid}}
+* Russian: {{t|ru|металлург|m|tr=metallurg|sc=Cyrl}}
 * Spanish: {{t-|es|metalúrgico|m|f}}, {{t-|es|metalurgista|m}}
 {{trans-bottom}}
 
