t+mk:[[се вее]] t+mk:[[се распрснува]] ([[WT:EDIT|Assisted]]) <blow#6912194>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -102,6 +102,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * German: {{t+|de|wehen}}
 {{trans-mid}}
 * Korean: [[불리다]] (bullida)
+* [[Macedonian]]: {{t|mk|се вее|tr=se vée|sc=Cyrl}}
 * Vietnamese: {{t+|vi|bay|xs=Vietnamese}}
 {{trans-bottom}}
 
@@ -116,6 +117,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-mid}}
 * Japanese: [[爆発]]する ([[ばくはつ]]する, bakuhatsu-suru)
 * Korean: [[터지다]] (teojida)
+* [[Macedonian]]: {{t|mk|се распрснува|tr=se rasp'rsnuva|sc=Cyrl}}
 * Portuguese: {{t+|pt|explodir}}
 * Russian: [[взрываться]] (vzryvát's'a) {{impf}}, [[взорваться]] (vzorvát's'a) {{pf}}, [[взлетать на воздух]] (vzletát' na vózduχ) {{impf}}, [[взлететь на воздух]] (vzlet'ét' na vózduχ) {{pf}}
 * Swahili: {{t|sw|panchi}}
