--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -191,6 +191,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * Hebrew: [[לנפח]] (le'nape'akh)
 {{trans-mid}}
 * Korean: [[불다]] (bulda)
+* [[Macedonian]]: {{t|mk|дува|tr=dúva|sc=Cyrl}}
 * Russian: [[выдувать]] (vyduvát') {{impf}}, [[выдуть]] (výdut') {{pf}}
 * Swahili: {{t|sw|panchi}}
 * Vietnamese: [[thổi]]
@@ -252,6 +253,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-mid}}
 * Hungarian: {{t|hu|csapás}}
 * Italian: {{t+|it|botta|f}},  {{t|it|colpo|m}}
+* [[Macedonian]]: {{t|mk|удар|m|tr=údar|sc=Cyrl}}
 * Russian: {{t+|ru|удар|m|tr=udár|sc=Cyrl}}
 * Swahili: {{t|sw|panchi}}
 * [[Telugu]]: [[దెబ్బ]]
