t+mk:[[удар]] ([[WT:EDIT|Assisted]]) <blow#6912201>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -265,6 +265,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * Finnish: {{t-|fi|takaisku}}
 {{trans-mid}}
 * German: {{t+|de|Rückschlag|m}}
+* [[Macedonian]]: {{t|mk|удар|m|tr=údar|sc=Cyrl}}
 * Russian: {{t+|ru|удар|m|tr=udár|sc=Cyrl}}
 * Swahili: {{t|sw|panchi}}
 * [[Telugu]]: [[దెబ్బ]] (2)
