--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -26,6 +26,7 @@
 {{trans-top|small change}}
 * Arabic: {{Arab|[[ضبط]]}} (ḍabṭ) {{m}}
 * {{trreq|Basque}}
+* Bulgarian: {{t|bg|нагласяване|sc=Cyrl}},  {{t|bg|приспособяване|sc=Cyrl}},  {{t|bg|настройка|sc=Cyrl}}
 * {{trreq|Catalan}}
 * Danish: {{t|da|justering|c}}, {{t|da|tilpasning|c}}
 * Dutch: [[aanpassing]] {{f}}, [[bijregeling]] {{f}}
