--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -95,6 +95,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 * Latin: {{t+|la|res|f|alt=rēs}}
 * Latvian: {{t-|lv|lieta|f|xs=Latvian}}
 * Lithuanian: {{t-|lt|dalykas|m|xs=Lithuanian}}
+* [[Macedonian]]: {{t|mk|нешто|n|tr=néšto|sc=Cyrl}}
 * [[Marathi]]: [[वस्तु]] (vastu)
 * Mongolian: {{t|mn|юм|sc=Cyrl|xs=Mongolian}}
 * {{trreq|Nepali}}
