--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -56,7 +56,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * Romanian: [[diviziune]] {{f}}
 * Russian: {{t+|ru|раздел|m|tr=razdél|sc=Cyrl}}, {{t+|ru|деление|n|tr=delénije|sc=Cyrl}}
 * Slovene: [[deljenje]] {{n}}
-* Swahili: {{t|sw|ugavi}}
+* Swahili: {{t|sw|ugavi}},  {{t|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
 * [[Telugu]]: [[విభజన]]
 * Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
@@ -72,7 +72,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * German: {{t+|de|Teil|m}}
 * Kurdish: {{t-|ku|به‌ش|sc=ku-Arab}}
 * [[Malayalam]]: [[വിഭാഗം]] (vibhaagam)
-* Swahili: {{t|sw|ugavi}}
+* Swahili: {{t|sw|ugavi}},  {{t|sw|farakano}}
 * [[West Frisian]]: {{t|fy|ôfdieling|c|xs=West Frisian}}
 {{trans-bottom}}
 
@@ -92,7 +92,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * Romanian: {{t-|ro|impartire|f}}
 * Russian: [[деление]] (delénije) {{n}}
 * Slovene: [[deljenje]] {{n}}
-* Swahili: {{t|sw|ugavi}}
+* Swahili: {{t|sw|ugavi}},  {{t|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
 * [[Telugu]]: [[భాగహారము]]
 * Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
@@ -108,7 +108,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 {{trans-mid}}
 * Polish: {{t-|pl|dzielenie|n}}
 * Russian: [[деление]] (delénije) {{n}}
-* Swahili: {{t|sw|ugavi}}
+* Swahili: {{t|sw|ugavi}},  {{t|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
 * Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
 * [[West Frisian]]: {{t|fy|dieling|c|xs=West Frisian}}
@@ -128,6 +128,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * Romanian: {{t-|ro|impartire|f}}
 * Russian: [[дивизия]] (divízija) {{f}} ''army'', [[дивизион]] (divizión) {{m}} ''navy''
 * Slovene: {{t+|sl|divizija|f}}
+* Swahili: {{t|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
 * [[Telugu]]: [[విభాగము]]
 * [[West Frisian]]: {{t|fy|divyzje|c|xs=West Frisian}}
@@ -141,6 +142,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * Romanian: [[divizie]] {{f}}
 {{trans-mid}}
 * Russian: [[отдел]] (otdél) {{m}}, [[отделение]] (otdelénije) {{n}}, [[секция]] (sékcija) {{f}}
+* Swahili: {{t|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
 * [[Telugu]]: [[విభాగము]]
 * [[West Frisian]]: {{t|fy|divyzje|c|xs=West Frisian}}
@@ -150,13 +152,13 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * Czech: {{t-|cs|oddělení|f}}
 * Finnish: {{t+|fi|kaari}}, {{t-|fi|pääjakso}}
 {{trans-mid}}
-* Swahili: {{t|sw|ugavi}}
+* Swahili: {{t|sw|ugavi}},  {{t|sw|farakano}}
 * Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
 * [[West Frisian]]: {{t-|fy|klasse|c|xs=West Frisian}}
 {{trans-bottom}}
 
 {{trans-top|disagreement; a difference of viewpoint}}
-* Swahili: {{t|sw|ugavi}}
+* Swahili: {{t|sw|ugavi}},  {{t|sw|farakano}}
 * [[West Frisian]]: {{t|fy|ôfstimming|c|xs=West Frisian}}
 {{trans-mid}}
 {{trans-bottom}}
