--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -145,6 +145,7 @@ From {{term|specio|speciō|see|lang=la}} + {{term|-ies|-iēs|lang=la}} suffix si
 [[la:species]]
 [[hu:species]]
 [[nl:species]]
+[[ja:species]]
 [[no:species]]
 [[pl:species]]
 [[ru:species]]
