--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -128,6 +128,7 @@ neutral of ''[[maximus]]''
 [[fr:maximum]]
 [[io:maximum]]
 [[id:maximum]]
+[[it:maximum]]
 [[kk:maximum]]
 [[hu:maximum]]
 [[nl:maximum]]
@@ -138,6 +139,6 @@ neutral of ''[[maximus]]''
 [[sv:maximum]]
 [[ta:maximum]]
 [[te:maximum]]
-[[vi:maximum]]
 [[tr:maximum]]
+[[vi:maximum]]
 [[zh:maximum]]
