/* Verb */ +bleed color adj <bleed#6942909>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -14,8 +14,12 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 # {{intransitive|of an animal}} To [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
 # {{transitive}} To [[let]] or [[draw]] [[blood]] from an animal.
 # {{transitive}} To [[take]] large amounts of [[money]] from.
+# {{transitive}} To steadily lose {something vital}.
+#: ''The company was '''bleeding''' talent.''
 # {{intransitive|of an ink or dye}} To [[spread]] from the intended location and [[stain]] the surrounding [[cloth]] or [[paper]].
 # {{transitive}} To [[remove]] [[air]] bubbles from a [[pipe]] containing [[fluid]]s.
+# {{intransitive|copulative}} To show one's group loyalty by showing (its associated color) in one's blood.
+#: ''He was a devoted Vikings fan: he '''bled''' purple.''
 
 ====Derived terms====
 * [[bleed dry]]
