--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -18,7 +18,7 @@ From {{etyl|fro}} ''[[plege]]'' (French: ''[[pleige]]'').
 
 ====Translations====
 {{trans-top|to make a solemn promise}}
-* Arabic: {{t|ar|تعهد|tr=ta3ahhada|alt=تَعَهَّدَ|sc=Arab}}
+* Arabic: {{t|ar|تعهد|tr=ta3ahhada|alt=تَعَه{{ar-dia|sha}}دَ|sc=Arab}}
 * Chinese: [[发誓]] (fāshì)
 * Finnish: {{t+|fi|luvata}}, {{t+|fi|sitoutua}}
 * French: {{t+|fr|promettre}}
