--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -38,7 +38,7 @@
 * French: {{t|fr|disque compact|m}}
 {{trans-mid}}
 * [[Macedonian]]: {{t|mk|компакт-диск|m|tr=kómpakt-disk|sc=Cyrl}},  {{t|mk|це-де|n|tr=ce-de|sc=Cyrl}}
-* Russian: {{t+|ru|компакт-диск|m|alt=компа́кт-ди́ск|tr=kompákt-disk|sc=Cyrl}}
+* Russian: {{t+|ru|компакт-диск|m|tr=kompákt-disk|sc=Cyrl}}
 {{trans-bottom}}
 
 ==={{abbreviation}}===
