t+ar:[[سي دي]] t+ar:[[CD]] t+ru:[[CD]] t-balance t+ja:[[シーディー]] t+zh:[[CD]] t+ja:[[cd]] t+ru:[[си-ди]] ([[WT:EDIT|Assisted]]) <CD#6943922>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -33,12 +33,15 @@
 
 ====Translations====
 {{trans-top|compact-disk}}
+* Arabic: {{t|ar|سي دي|m|tr=sii dii|sc=Arab}},  {{t|ar|CD|m|tr=sii dii|sc=Arab}}
 * Chinese: [[光盤]], [[光盘]] (guāngpán), [[光碟]] (guāngdié) <!-- previously: {{t-|cmn|光盘|tr=guāngpán|sc=Hani|xs=Mandarin}}-->
 * Dutch: {{t+|nl|cd|m}} (lower case)
 * French: {{t|fr|disque compact|m}}
 {{trans-mid}}
+* Japanese: {{t|ja|シーディー|tr=sīdī|sc=Jpan}},  {{t|ja|cd|tr=sīdī|sc=Jpan}}
 * [[Macedonian]]: {{t|mk|компакт-диск|m|tr=kómpakt-disk|sc=Cyrl}},  {{t|mk|це-де|n|tr=ce-de|sc=Cyrl}}
-* Russian: {{t+|ru|компакт-диск|m|tr=kompákt-disk|sc=Cyrl}}
+* Mandarin: {{t|zh|CD|tr=sìdì|sc=Hani}}
+* Russian: {{t+|ru|компакт-диск|m|tr=kompákt-disk|sc=Cyrl}},  {{qualifier|indeclinable}} {{t|ru|CD|m|tr=si-di|sc=Cyrl}},  {{qualifier|indeclinable}} {{t|ru|си-ди|m|tr=si-di|sc=Cyrl}}
 {{trans-bottom}}
 
 ==={{abbreviation}}===
