--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -40,7 +40,7 @@
 {{trans-mid}}
 * Japanese: {{t|ja|シーディー|tr=sīdī|sc=Jpan}},  {{t|ja|cd|tr=sīdī|sc=Jpan}}
 * [[Macedonian]]: {{t|mk|компакт-диск|m|tr=kómpakt-disk|sc=Cyrl}},  {{t|mk|це-де|n|tr=ce-de|sc=Cyrl}}
-* Mandarin: {{t|zh|CD|tr=sìdì|sc=Hani}}
+* Mandarin: {{t|zh|CD|tr=sìdì|sc=Hani}},  {{t|zh|光盤|sc=Hani}},  {{t|zh|光盘|tr=guāngpán|sc=Hani}},  {{t|zh|光碟|tr=guāngdié|sc=Hani}}
 * Russian: {{t+|ru|компакт-диск|m|tr=kompákt-disk|sc=Cyrl}},  {{qualifier|indeclinable}} {{t|ru|CD|m|tr=si-di|sc=Cyrl}},  {{qualifier|indeclinable}} {{t|ru|си-ди|m|tr=si-di|sc=Cyrl}}
 {{trans-bottom}}
 
