--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -39,7 +39,7 @@
 * Dutch: {{t+|nl|cd|m}} (lower case)
 * French: {{t|fr|disque compact|m}}
 {{trans-mid}}
-* Japanese: {{t|ja|シーディー|tr=sīdī|sc=Jpan}},  {{t|ja|cd|tr=sīdī|sc=Jpan}},  {{t|ja|コンパクトディスク|tr=konpakutodisuku|sc=Jpan}}
+* Japanese: {{t|ja|シーディー|tr=sīdī|sc=Jpan}},  {{t|ja|CD|tr=sīdī|sc=Jpan}},  {{t|ja|コンパクトディスク|tr=konpakutodisuku|sc=Jpan}}
 * [[Macedonian]]: {{t|mk|компакт-диск|m|tr=kómpakt-disk|sc=Cyrl}},  {{t|mk|це-де|n|tr=ce-de|sc=Cyrl}}
 * Russian: {{t+|ru|компакт-диск|m|tr=kompákt-disk|sc=Cyrl}},  {{qualifier|indeclinable}} {{t|ru|CD|m|tr=si-di|sc=Cyrl}},  {{qualifier|indeclinable}} {{t|ru|си-ди|m|tr=si-di|sc=Cyrl}}
 {{trans-bottom}}
