--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -91,6 +91,7 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 * Dutch: {{t+|nl|buigen}}, {{t|nl|plooien}}
 * Finnish: {{t+|fi|taipua}}
 * German: {{t|de|biegen}}
+* German: {{t|de|durchbiegen}}
 * Hebrew: [[להתכופף]] (le'hitkofef)
 * Japanese: {{t-|ja|曲がる|tr=magaru|sc=Jpan}}
 {{trans-mid}}
