--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -90,7 +90,7 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 {{trans-top|to become curved}}
 * Dutch: {{t+|nl|buigen}}, {{t|nl|plooien}}
 * Finnish: {{t+|fi|taipua}}
-* German: {{t|de|biegen}}
+* German: {{t|de|biegen}},  {{t|de|biegen}}
 * German: {{t|de|durchbiegen}}
 * Hebrew: [[להתכופף]] (le'hitkofef)
 * Japanese: {{t-|ja|曲がる|tr=magaru|sc=Jpan}}
