t+sw:[[kipenga]] t+sw:[[firimbi]] ([[WT:EDIT|Assisted]]) <whistle#6950577>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -88,6 +88,7 @@
 * Russian: {{t|ru|свисток|m|tr=svistók|sc=Cyrl}}
 * Serbian: {{t|sr|pištaljka|f}}, {{t-|sr|zviždaljka|f}}, [[zviždalica]] {{f}}, [[pištalica]] {{f}}
 * Spanish: {{t+|es|chifle|m}},  {{t+|es|pito|m}},  {{t+|es|silbato|m}}
+* Swahili: {{t|sw|kipenga}},  {{t|sw|firimbi}}
 * Swedish: {{t+|sv|vissla|c}}, {{t+|sv|pipa|c}}, {{t+|sv|visselpipa|c}}
 {{trans-bottom}}
 
