--- a/en/n/North African.741821.wikitext
+++ b/en/n/North African.741821.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 {{trans-top}}
+* Ido: nord-Afrikana
 * Italian: [[nordafricano]]
 {{trans-mid}}
 * Polish: [[północnoafrykański]] {{m}}
