--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -83,12 +83,13 @@
 {{trans-mid}}
 * Italian: {{t-|it|fischietto|m}}
 * Japanese: {{t+|ja|笛|tr=[[ふえ]], fue|sc=Jpan}}
+* [[Meru]]: {{tø|mer|thirimbi}}
 * Polish: {{t|pl|gwizdek|m}}
 * Portuguese: {{t|pt|apito|m}}
 * Russian: {{t|ru|свисток|m|tr=svistók|sc=Cyrl}}
 * Serbian: {{t|sr|pištaljka|f}}, {{t-|sr|zviždaljka|f}}, [[zviždalica]] {{f}}, [[pištalica]] {{f}}
 * Spanish: {{t+|es|chifle|m}},  {{t+|es|pito|m}},  {{t+|es|silbato|m}}
-* Swahili: {{t|sw|kipenga}},  {{t|sw|firimbi}}
+* Swahili: {{t|sw|kipenga}},  {{t|sw|firimbi}},  {{t|sw|filimbi}}
 * Swedish: {{t+|sv|vissla|c}}, {{t+|sv|pipa|c}}, {{t+|sv|visselpipa|c}}
 {{trans-bottom}}
 
