t+sw:[[kipenga]] ([[WT:EDIT|Assisted]]) <whistle#6962997>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -31,6 +31,7 @@
 * Russian: {{t|ru|свистеть|tr=svist'ét’|sc=Cyrl}} {{impf}}, {{t|ru|свистнуть|tr=svístnut’|sc=Cyrl}} {{pf}}
 * Serbian: {{t|sr|zvižduk|m}}
 * Spanish: {{t+|es|silbar}},  {{t+|es|chiflar}},  {{t+|es|pitar}}
+* Swahili: {{t|sw|kipenga}}
 * Swedish: {{t+|sv|vissla}}
 {{trans-bottom}}
 
@@ -43,6 +44,7 @@
 {{trans-mid}}
 * Russian: {{t|ru|свистеть|tr=svist'ét’|sc=Cyrl}} {{impf}}, {{t|ru|просвистеть|tr=prosvist'ét’|sc=Cyrl}} {{pf}}
 * Serbian: {{t|sr|zviždanje}}, {{t-|sr|zviždati}}
+* Swahili: {{t|sw|kipenga}}
 * Swedish: {{t+|sv|vissla}}
 {{trans-bottom}}
 
@@ -108,6 +110,7 @@
 * Portuguese: {{t|pt|apito|m}}, {{t|pt|assobio|m}}
 * Russian: {{t|ru|свист|m|tr=svist|sc=Cyrl}}
 * Spanish: {{t+|es|silbato|m}},  {{t|es|pitido|m}},  {{t|es|chiflido|m}},  {{t|es|pitada|f}}
+* Swahili: {{t|sw|kipenga}}
 * Swedish: {{t|sv|vissling|c}}
 {{trans-bottom}}
 
@@ -124,6 +127,7 @@
 * Portuguese: [[apito]] {{m}}, [[assobio]] {{m}}
 * Russian: {{t|ru|свист|m|tr=svist|sc=Cyrl}}
 * Spanish: {{t+|es|silbato|m}},  {{t+|es|pito|m}},  {{t|es|pitido}}
+* Swahili: {{t|sw|kipenga}}
 {{trans-bottom}}
 
 {{trans-see|slang: a suit|suit}}
