--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -1,7 +1,6 @@
 {{wikipedia}}
-[[Image:Sciurus carolinensis.jpg|thumb|An Eastern Gray Squirrel]]
 ==English==
-
+[[Image:Eichhörnchen Düsseldorf Hofgarten edit.jpg|thumb|Red Squirrel|250px]]
 ===Etymology===
 From {{etyl|xno}} ''[[esquirel]]'', from {{etyl|fro}} ''[[escurel]]'' (modern {{etyl|fr}} {{term|écureuil|lang=fr}}), from {{VL.}} ''[[scuriolus]]'', diminutive of ''[[scurius]]'', variant of {{etyl|la}} {{term|sciurus|lang=la}}, from {{etyl|grc}} {{term|σκίουρος|lang=grc|sc=polytonic|tr=skíouros}} < {{term|σκιά||shade, shadow|lang=grc|sc=polytonic|tr=skiá}} + {{term|οὐρά||tail|lang=grc|sc=polytonic|tr=ourá}}.
 
@@ -20,7 +19,8 @@ From {{etyl|xno}} ''[[esquirel]]'', from {{etyl|fro}} ''[[escurel]]'' (modern {{
 {{trans-top|Rodent}}
 * Albanian: [[ketër]] {{m}}
 * Arabic: {{t-|ar|سنجاب|m|tr=sinjāb|sc=Arab}}
-* Armenian: [[սկյուռ]] (skyuṙ)
+* Armenian: {{t|hy|սկյուռ|sc=Armn|tr=skyuṙ}}
+*:Old Armenian: {{t|xcl|սկիւռ|sc=Armn|tr=skiwṙ}}
 * [[Basque]]: [[katagorri]]
 * Belarusian: [[звачайная ваверка]] {{f}}
 * Bosnian: {{t-|bs|vjeverica|f}}
