sorted/rebalanced translations, trans link [[Luhya]] <thing#6975418>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -38,7 +38,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 *: Forasmuch as many have taken in hand to set forth in order a declaration of those '''things''' which are most surely believed among us...
 
 ====Related terms====
-*''diminutives:'' [[thingy]] / [[thingie]], [[thingo]] [''Aus'']
+* ''diminutives:'' [[thingy]] / [[thingie]], [[thingo]] [''Aus'']
 
 ====Synonyms====
 * [[stuff]] ([[uncountable]] equivalent)
@@ -85,8 +85,8 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 * [[Ido]]: [[kozo]]
 * Indonesian: [[benda]], [[barang]], [[makhluk]]
 * [[Interlingua]]: [[cosa]]
-{{trans-mid}}
 * Irish: {{t-|ga|rud|m|xs=Irish}}, {{t-|ga|ní|m|xs=Irish}}
+{{trans-mid}}
 * Italian: {{t+|it|cosa|f}}
 * Japanese: [[物]] ([[もの]], mono) [[事]] ([[こと]], koto)
 * Korean: [[물건]] (mulgeon)
@@ -154,13 +154,13 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 * [[Inuktitut]]: [[ᐱ]]
 * Irish: {{t-|ga|rud|m|xs=Irish}}, {{t-|ga|ní|m|xs=Irish}}
 * Italian: {{t+|it|cosa|f}}
-{{trans-mid}}
 * Japanese: [[物]] ([[もの]], mono)
+{{trans-mid}}
 * Korean: [[물건]] (mulgeon)
 * Latin: {{t+|la|res|f|alt=rēs}}
 * Latvian: {{t-|lv|lieta|xs=Latvian}}
-* Lithuanian: {{t+|lt|daiktas|m|xs=Lithuanian}}, {{t-|lt|dalykas|m|xs=Lithuanian}} 
-* Luhya: {{tø|luy|sindu}}
+* Lithuanian: {{t+|lt|daiktas|m|xs=Lithuanian}}, {{t-|lt|dalykas|m|xs=Lithuanian}}
+* [[Luhya]]: {{tø|luy|sindu}}
 * [[Macedonian]]: {{t|mk|нешто|n|tr=néšto|sc=Cyrl}}
 * [[Marathi]]: [[वस्तु]] (vastu)
 * Norwegian: {{t+|no|ting}}, {{t-|no|dings}}, {{t+|no|greie|m}}
