--- a/en/f/four score and seven years ago.803552.wikitext
+++ b/en/f/four score and seven years ago.803552.wikitext
@@ -8,4 +8,4 @@ In Abraham Lincoln's Gettysburg Address, he used this (at the time) commonplace 
 {{infl|en|adverb|head=[[four]] [[score]] [[and]] [[seven]] [[years]] [[ago]]}}
 
 # {{idiomatic}} As an [[opener]], a sometimes sarcastic [[indicator]] to indicate a past event being mentioned is particularly important.
-# {{literally}}{{obsolete}} 87 [[year]]s prior to [[today]].
+# {{literally|archaic}} 87 [[year]]s prior to [[today]].
