--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -4,8 +4,8 @@
 
 Perhaps a calque of the Latin phrase [[potiusque sero quam nunquam]] from the 4th book<ref>{{cite web |url=http://mcadams.posc.mu.edu/txt/ah/Livy/Livy04.html |title=Livy's History of Rome |accessdate=May 29, 2007 |author=Butterfield, Bruce J. |date=1996 |format=HTML | publisher=Marquette University ([http://mu.edu mu.edu]) |language=English.}}</ref> of ''[[w:Ab Urbe condita (book)|Ab Urbe condita]]'' (''History of Rome'') by [[w:Livy|Titus Livius]], around 27 BC.
 
-===Phrase===
-'''[[better]] [[late]] than [[never]]'''
+===Adjective===
+{{infl|en|adj|head=[[better]] [[late]] than [[never]]}}
 
 # It's better to do something late, than to never do it at all.
 #* '''1996.''' Titus Livius (translation). ''Livy's History of Rome'' (in English):
@@ -39,6 +39,5 @@ Perhaps a calque of the Latin phrase [[potiusque sero quam nunquam]] from the 4t
 <references/>
 
 [[Category:English aphorisms]]
-[[Category:English idioms]]
 
 [[pl:better late than never]]
