--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -15,20 +15,20 @@ See [[bind]]
 '''bound'''
 
 # {{past of|[[bind]]}}
-#: ''I '''bound''' the [[splint]] to my leg.''
-#: ''I had '''bound''' the splint with [[duct tape]].''
+#:''I '''bound''' the [[splint]] to my leg.
+#:''I had '''bound''' the splint with [[duct tape]].
 
 ====Adjective====
 {{en-adj|-}}
 
-# {{context|with infinitive}} Obliged (to).
-#: ''You are not legally '''bound''' to reply.''
-# {{context|with infinitive}} Very [[likely]] (to).
-#: ''They were '''bound''' to come into conflict eventually.
-# {{linguistics}} Refers to a type [[morpheme]] that cannot stand alone as a free word
+# {{context|with infinitive}} [[obliged]] (to).
+#:''You are not legally '''bound''' to reply.''
+# {{context|with infinitive}} very [[likely]] (to).
+#:''They were '''bound''' to come into conflict eventually.
+# {{linguistics}} referring to a type of [[morpheme]] that cannot stand alone as a free word
 
 =====Derived terms=====
-*[[bound to]]
+* [[bound to]]
 
 =====Translations=====
 obliged to
@@ -97,8 +97,8 @@ very likely to
 {{en-verb}}
 
 # To [[surround]] a territory or other geographical entity.
-#: ''France, Portugal, Gibraltar and Andorra '''bound''' Spain.''
-#: ''Kansas is '''bounded''' by Nebraska on the north, Missouri on the east, Oklahoma on the south and Colorado on the west.''
+#:''France, Portugal, Gibraltar and Andorra '''bound''' Spain.
+#:''Kansas is '''bounded''' by Nebraska on the north, Missouri on the east, Oklahoma on the south and Colorado on the west.
 # {{mathematics}} To be the [[boundary]] of.
 
 =====Derived terms=====
@@ -132,8 +132,8 @@ very likely to
 ====Noun====
 {{en-noun}}
 
-# A sizeable [[jump]], leap.
-#: ''The [[deer]] crossed the [[stream]] in a single '''bound'''.''
+# A sizeable [[jump]], great leap.
+#:''The [[deer]] crossed the [[stream]] in a single '''bound'''.
 
 =====Derived terms=====
 * [[by leaps and bounds]]
@@ -154,7 +154,7 @@ very likely to
 {{en-verb}}
 
 # To [[leap]], move by jumping.
-#: ''The rabbit bounded down the lane.''
+#:''The rabbit '''bounded''' down the lane.
 
 =====Derived terms=====
 * [[rebound]]
@@ -174,10 +174,10 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 ====Adjective====
 {{en-adj}}
 
-# {{obsolete}} [[ready|Ready]], [[prepared]].
-# Ready to start or go (to); moving in the direction (of).
-#: ''Which way are you '''bound'''?''
-#: ''Is that message '''bound''' for me?''
+# {{obsolete}} [[ready]], [[prepared]].
+# ready, [[able]] to start or go (to); moving in the direction (of).
+#:''Which way are you '''bound'''?
+#:''Is that message '''bound''' for me?
 
 =====Derived terms=====
 {{rel-top|terms derived from the adjective ''bound'' ("moving in the direction of")}}
