+ syn [[get a load of]] <behold#6993034>

--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -13,6 +13,9 @@
 
 # {{transitive}} To [[see]], or to [[look at]].
 
+====Synonyms====
+* [[get a load of]]
+
 ====Translations====
 {{trans-top|to see, to look at}}
 * Aramaic:
