/* Derived terms */ + [[wet one's whistle]]; made section collapsible <whistle#6993200>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -69,8 +69,13 @@
 # {{CockneyRS}} A [[suit]].
 
 ====Derived terms====
-* [[clean as a whistle‎]]
+{{rel-top3|Terms derived from the noun ''whistle''}}
 * [[bells and whistles]]
+{{rel-mid3}}
+* [[clean as a whistle‎]]
+{{rel-mid3}}
+* [[wet one's whistle]]
+{{rel-bottom}}
 
 ====Translations====
 {{trans-top|device used to make a whistling sound}}
