--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -124,7 +124,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Czech: {{t-|cs|rozbít}} se, {{t-|cs|zlomit}} se
 * Danish: gå i [[stykke]]r, gå [[itu]]
 * Dutch: {{t+|nl|breken}}
-* Esperanto: {{t-|eo|rompi|xs=Esperanto}}
+* Esperanto: {{t-|eo|rompi|xs=Esperanto}},  {{t|eo|rompiĝi}}
 * Finnish: {{t-|fi|särkyä}}, {t|fi|mennä rikki}}, {{t+|fi|hajota}}
 * French: [[se rompre]], [[se casser]], [[se briser]]
 * Georgian: [[ტყდომა]] (tq‘doma), [[მტვრევა]] (mtvreva)
