--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -12,6 +12,7 @@
 
 ====Translations====
 {{trans-top|Vegetable}}
+* [[Afrikaans]]: {{t|af|blomkool}}
 * Armenian: {{t-|hy|ծաղկակաղամբ|tr=çaġkakaġamb|sc=Armn|xs=Armenian}}
 * Czech: {{t-|cs|květák|m}}, {{t|cs|karfiól|m}}
 * French: {{t+|fr|chou-fleur|m}}
@@ -20,6 +21,7 @@
 * [[Macedonian]]: {{t-|mk|карфиол|m|tr=karfiól|sc=Cyrl|xs=Macedonian}}
 * Polish: {{t+|pl|kalafior|m}}
 * Russian: {{t+|ru|цветная капуста|tr=tsvetnája kapústa|sc=Cyrl}}
+* [[Sotho]]: {{t|st|kholifolawa}}
 {{trans-bottom}}
 
 {{trans-top|Edible head of a cauliflower plant}}
