--- a/en/m/my fellow Americans.803559.wikitext
+++ b/en/m/my fellow Americans.803559.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
-===Phrase===
-{{infl|en|phrase}}
+===Noun===
+{{infl|en|noun|head=[[my]] [[fellow]] [[American]]s}}
 
-# {{US}} An attempt to establish [[credibility]] and [[connectivity]] with an [[audience]] originating mostly from its use in speeches by US [[president]]s.
+# {{US}} {{non-gloss definition|Used to establish [[credibility]] and [[connection]] with an [[audience]] of Americans, used mostly in speeches by US politicians}}.
