--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -34,12 +34,12 @@
 * Finnish: [[säätö]], [[hienosäätö]]
 * French: [[ajustement]] {{m}}, [[arèglement]] {{m}}
 * German: {{t+|de|Anpassung|f}}
-* Greek: [[διευθέτηση]] (diefthetisi) {{f}}, [[ρύθμιση]] (rithmisi) {{f}}, [[προσαρμογή]] (prosarmogí) {{f}}, [[διαβάθμηση]] (diaváthmisi) {{f}}
+* Greek: [[διευθέτηση]] (diefθétisi) {{f}}, [[ρύθμιση]] (ríiθmisi) {{f}}, [[προσαρμογή]] (prosarmogí) {{f}}, [[διαβάθμηση]] (diaváθmisi) {{f}}
 * {{trreq|Guarani}}
 * Hebrew: {{t+|he|כוון|m|alt=כִּוּוּן|sc=Hebr}}
 * Hungarian: {{t|hu|beállítás}}
-* [[Interlingua]]: [[adjustamento]]
 {{trans-mid}}
+* [[Interlingua]]: [[adjustamento]]
 * Italian: {{t+|it|adattamento|m}}, {{t+|it|inserimento|m}}
 * Japanese: [[調整]] (chōsei); [[調節]] (chōsetsu)
 * {{trreq|Korean}}
