--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -90,8 +90,9 @@
 {{trans-top|public notice}}
 * Bulgarian: {{t|bg|обявление|sc=Cyrl}},  {{t|bg|обява|sc=Cyrl}}
 * German: [[Anzeige]] {{f}}, [[Bekanntmachung]] {{f}}
-* Kurdish: {{ku-Arab|[[بۆزانین]]}}
+* Greek: {{t+|el|διαφήμιση|f|tr=diafimisi|sc=Grek}}, {{t+|el|αγγελία|f|tr=agelía|sc=Grek}}
 {{trans-mid}}
+* Kurdish: {{ku-Arab|[[بۆزانین]]}}
 * [[Macedonian]]: {{t|mk|оглас|m|tr=óglas|sc=Cyrl|xs=Macedonian}}
 * Portuguese: [[edital]] {{m}}
 {{trans-bottom}}
