--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -10,6 +10,7 @@
 * Armenian: {{t|hy|այծ|tr=ayç|sc=Armn}}
 * Finnish: {{t+|fi|kuttu}}
 {{trans-mid}}
+* German: {{t|de|Ziege|f}}
 * [[Macedonian]]: {{t|mk|коза|f|tr=koza|sc=Cyrl}}
 * [[Old Church Slavonic]]: {{tø|cu|коза|f|tr=koza|sc=Cyrl|xs=Old Church Slavonic}}
 {{trans-bottom}}
