/* Etymology 1 */ +sense <bound#7013511>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -21,22 +21,30 @@ See [[bind]]
 ====Adjective====
 {{en-adj|-}}
 
-# {{context|with infinitive}} [[obliged]] (to).
+# {{context|with infinitive}} [[obliged|Obliged]] (to).
 #:''You are not legally '''bound''' to reply.''
-# {{context|with infinitive}} very [[likely]] (to).
+# {{context|with infinitive}} Very [[likely]] (to).
 #:''They were '''bound''' to come into conflict eventually.
-# {{linguistics}} referring to a type of [[morpheme]] that cannot stand alone as a free word
+# {{linguistics|of a [[morpheme]]}} That cannot stand alone as a free word.
+# {{mathematics|logic|of a [[variable]]}} [[constrained|Constrained]] by a [[quantifier]].
+
+=====Antonyms=====
+* {{sense|logic: constrained by a quantifier}} [[free]]
 
 =====Derived terms=====
 * [[bound to]]
 
 =====Translations=====
-obliged to
+{{trans-top|obliged to}}
 * Dutch: {{t+|nl|gehouden}}
+{{trans-mid}}
 * French: {{t+|fr|obligé}}, {{t+|fr|tenu}}
+{{trans-bottom}}
 
-very likely to
+{{trans-top|very likely to}}
 * Dutch: {{t+|nl|geacht}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ===Etymology 2===
 < {{etyl|enm}} {{term|bounde}} < {{etyl|fro}} {{term|bunne}} < {{ML.}} {{term|bodina}}, earlier {{term|butina||a bound, limit}}
