--- a/en/f/formal grammar.775171.wikitext
+++ b/en/f/formal grammar.775171.wikitext
@@ -4,7 +4,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{computer science}} A precise [[mathematical]] description of a [[formal language]].
+# {{computer science}} A precise [[mathematical]] description of a [[formal language]], consisting of terminal symbols, nonterminal symbols, a nonterminal symbol serving as start symbol, and a set of production rules that control the expansion of nonterminal symbols into strings consisting of both terminal and nonterminal symbols.
 
 ====Related terms====
 * [[generative grammar]]
