--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -47,9 +47,10 @@
 * [[yea]]
 * [[yes]]
 * [[uh-huh]]
+* [[aye]]
 
 ====Synonyms====
-* (''agreement''): [[yep]], [[yup]]
+* (''agreement''): [[yep]], [[yup]], [[aye]]
 * (''joy''): [[hurrah]], [[hurray]], [[woohoo]], [[yay]], [[yippee]] <!--etc-->
 
 ====Translations====
