--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -96,6 +96,7 @@ From {{etyl|la}} ''[[consumere]]''.
 # {{es-verb form of|ending=ir|mood=indicative|tense=present|pers=3|number=singular|[[consumir]]}}
 
 [[et:consume]]
+[[fa:consume]]
 [[fr:consume]]
 [[io:consume]]
 [[id:consume]]
