--- a/en/s/simple sentence.741362.wikitext
+++ b/en/s/simple sentence.741362.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 {{trans-top|sentence containing one independent clause and no dependent clause}}
+* Armenian: {{t|hy|պարզ նախադասություն|tr=parz naxadasut’yun|sc=Armn}}
 {{trans-mid}}
 {{trans-bottom}}
 
