--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -32,6 +32,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Hungarian: {{t+|hu|buborék}}
 * Japanese: [[泡]] (あわ, awa)
 {{trans-mid}}
+* Korean: {{t|ko|거품|tr=geopum|sc=Kore}}
 * Kurdish: {{t|ku|بڵق|sc=ku-Arab}}
 * Latin: {{t-|la|bulla|f}}
 * Latvian: {{t-|lv|burbuļi|m|xs=Latvian}}
