/* Alternative forms */ <Transnistria#7055309>

--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -3,8 +3,9 @@
 [[Image:Transnistria-map.png|thumb|right|Moldavia in purple, Transnistria in yellow]]
 
 ===Alternative forms===
-*[[Transdniestria]]
-*[[Trans-Dniester]]
+* [[Transdniestria]]
+* [[Trans-Dniester]]
+* [[Pridnestrovie]]
 
 ===Etymology===
 Literally "beyond the river [[Dniester]]".
