adv <in the reign of Queen Dick#7063964>

--- a/en/i/in the reign of Queen Dick.801800.wikitext
+++ b/en/i/in the reign of Queen Dick.801800.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
-===Idiom===
-{{infl|en|idiom|head=in the [[reign]] of [[queen|Queen]] [[dick|Dick]]}}
+===Adverb===
+{{infl|en|adverb|head=in the [[reign]] of [[queen|Queen]] [[dick|Dick]]}}
 
-# [[when pigs fly]]; [[never]]
+# {{idiom|UK}} [[when pigs fly]]; [[never]]
