iwiki +[[:ro:squirrel]] <squirrel#7073276>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -142,6 +142,7 @@ The participles with a double 'l' ('''[[squirrelling]]''' and '''[[squirrelled]]
 [[no:squirrel]]
 [[oc:squirrel]]
 [[pl:squirrel]]
+[[ro:squirrel]]
 [[ru:squirrel]]
 [[simple:squirrel]]
 [[fi:squirrel]]
