t+eo:[[fleksi]] ([[WT:EDIT|Assisted]]) <bend#7073458>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -46,7 +46,7 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 * Chinese: {{t-|cmn|屈|tr=qū|sc=Hani|xs=Mandarin}}, {{t-|cmn|曲|tr=qū|sc=Hani|xs=Mandarin}}, {{zh-tsp|彎|弯|wān}}
 * Czech: {{t-|cs|ohnout}}
 * Dutch: {{t+|nl|buigen}}, {{t+|nl|plooien}}
-* Esperanto: {{t|eo|kurbigi}}
+* Esperanto: {{t|eo|kurbigi}},  {{t|eo|fleksi}}
 * Finnish: {{t+|fi|taivuttaa}}
 * German: {{t+|de|beugen}}
 * Hebrew: [[לכופף]] (le'khofef)
