tagged translations table problem <bend#7073898>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -88,6 +88,7 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 * Swahili: {{t|sw|pinda|xs=Swahili}}
 {{trans-bottom}}
 
+{{rfc-tsort|duplicate language: German}}
 {{trans-top|to become curved}}
 * Dutch: {{t+|nl|buigen}}, {{t+|nl|plooien}}
 * Finnish: {{t+|fi|taipua}}
