--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -124,7 +124,7 @@
 * [[Tamil]]: {{t|ta|எளிய |tr=eḷiya|xs=Tamil}}, {{t|ta|எளிது |tr=eḷitu|xs=Tamil}}, {{t|ta|எளிமையான|tr=eḷimaiyāNa|xs=Tamil}}
 * [[Telugu]]: [[సరళమైన]] (saraLamaina)
 * Thai: {{Thai|[[ง่าย]]}} (ngâai)
-* Turkish: {{t|tr|süssüz}}, {{t+|tr|sade}}
+* Turkish: {{t|tr|basit}}, {{t+|tr|sade}}
 * Vietnamese: {{t|vi|giản dị|xs=Vietnamese}}, {{t|vi|mộc mạc|xs=Vietnamese}}
 {{trans-bottom}}
 
