/* Translations */ turkish ttbc <consumption#7079548>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -61,8 +61,9 @@
 {{trans-see|pulmonary tuberculosis}}
 
 {{checktrans-top}}
-{{trans-mid}}
 * {{ttbc|German}}: [[Schwindsucht]] {{f}}
+{{trans-mid}}
+* {{ttbc|Turkish}}: [[yoğaltım]]
 {{trans-bottom}}
 
 [[ar:consumption]]
