t+bg:[[гледам]] t+bg:[[виждам]] ([[WT:EDIT|Assisted]]) <behold#7085945>

--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -21,6 +21,7 @@
 * Aramaic:
 *: Syriac: [[ܗܐ]] (hā, ho)
 *: Hebrew: [[הא]] (hā, ho)
+* Bulgarian: {{t|bg|гледам|sc=Cyrl}},  {{t|bg|виждам|sc=Cyrl}}
 * [[Catalan]]: [[mirar]], [[vigilar]]
 * Dutch: {{t+|nl|aanschouwen}}
 * Finnish: [[katsoa]] (1)
