/* Translations */ merge de <bend#7092880>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -91,13 +91,11 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 * Swahili: {{t|sw|pinda|xs=Swahili}}
 {{trans-bottom}}
 
-{{rfc-tsort|duplicate language: German}}
 {{trans-top|to become curved}}
 * Bulgarian: {{t|bg|извивам се|sc=Cyrl}}
 * Dutch: {{t+|nl|buigen}}, {{t+|nl|plooien}}
 * Finnish: {{t+|fi|taipua}}
-* German: {{t+|de|biegen}},  {{t+|de|biegen}}
-* German: {{t|de|durchbiegen}}
+* German: {{t+|de|biegen}},  {{t+|de|biegen}}, {{t|de|durchbiegen}}
 * Hebrew: [[להתכופף]] (le'hitkofef)
 * Japanese: {{t-|ja|曲がる|tr=magaru|sc=Jpan}}
 {{trans-mid}}
