+antonym; +RT <incommunicable#7095452>

--- a/en/i/incommunicable.741075.wikitext
+++ b/en/i/incommunicable.741075.wikitext
@@ -6,6 +6,12 @@
 # {{context|of a disease etc}} That cannot be [[communicated]] or [[transmitted]]
 # {{context|of a person}} Who does not [[communicate]] freely; [[uncommunicative]] or [[reserved]]
 
+====Antonyms====
+* [[communicable]]
+
+====Related terms====
+* [[incommunicability]]
+
 [[fr:incommunicable]]
 [[io:incommunicable]]
 [[te:incommunicable]]
